Refactor for JDK 7 compatibility